[project]
name = "langgraph-basics"
version = "0.1.0"
description = "Teaching repository for learning LangGraph fundamentals step by step"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
